--- a/acercade.html
+++ b/acercade.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="stylos.css">
+    <title>Informacion Personal</title>
 </head>
+
 <body>
     
+    <header>
+        <h1> Bienvenido a mi pagina personal </h1>
+        <img src="logocurza.png" alt="logo">
+    </header>
+    
+    <section>
+        <p>
+            Mi nombre es Facundo Rodrigo Contreras, naci el 13 de Marzo de 1992 en la ciudad de Viedma provincia de Rio Negro. Soy tecnico agronomo, tecnico en repacion de celulares y estudiante de la carrera de desarrollo web. Trabajo como docente en nivel secundario.
+            Mi hobby es el stand up paddle sobre aguas planas, de manera recreativa y competitiva.
+        </p>
+    </section>
+
+    <section>
+        <p>
+            Si deseas regresar al inicio, seleccion Volver al inicio
+        </p>
+        <nav>
+            <ul><a href="index.html">Volver al Inicio</a></ul>
+        </nav>
+    </section>
+
+    <main>
+
+    </main>
+
+    <footer id="pie">
+        <p>
+            CURZA
+        </p>
+        <p>
+            Monseñor Esandi y Ayacucho
+        </p>
+        <p>
+            Viedma (8500)
+        </p>
+        <p>
+            Rio Negro, Argentina
+        </p>
+        <p>
+            &copy;Todos los derechos reservados &copy;
+        </p>
+
+    </footer>
 </body>
 </html>
