--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="acercade.html"></a></li>
-            <li><a href="contacto.html"></a></li>
+            <li><a href="acercade.html"> Informacion Personal </a></li>
+            <li><a href="contacto.html"> Contacto </a></li>
 
         </ul>
     </nav>
