--- a/contacto.html
+++ b/contacto.html
@@ -86,7 +86,7 @@
         </form>
         
         <!-- Tabla Vacía -->
-        <table border="1">
+        <table>
             <tr>
                 <th>Campo</th>
                 <th>Valor</th>
