--- a/acercade.html
+++ b/acercade.html
@@ -21,7 +21,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="info">
         <p>
             Si deseas regresar al inicio, seleccion Volver al inicio
         </p>
