--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <article>
         <h2> Pagina Personal </h2>
-        <h3> Hola! Mi nombre es Facundo Contreras </h3>
+        <h3> Hola, mi nombre es Facundo Contreras </h3>
     </article>
 
     <section>
