--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
     </nav>
 
-    <header>
+    <header class="fixed-header">
         <div class="titulo">
             <h1> Programación Estatica y Laboratorio Web </h1>
         </div>
