--- a/contacto.html
+++ b/contacto.html
@@ -14,9 +14,13 @@
         </ul>
     </nav>
 
-    <header>
-        <h1> Contacto </h1>
-        <img src="logocurza.png" alt="logo">
+    <header class="fixed-header">
+        <div class="titulo">
+            <h1> Programación Estatica y Laboratorio Web </h1>
+        </div>
+        <div class="logo">
+            <img src="logocurza.png" alt="logo">
+        </div>
     </header>
     
     <main>
