--- a/contacto.html
+++ b/contacto.html
@@ -139,7 +139,7 @@
 
     </main>
 
-    <footer id="pie">
+    <footer id="pie" class="sticky-footer">
         <p>
             CURZA
         </p>
