agrego foto personal y foto pagina principal

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         </div>
     </header>
 
+    <h2>
+        <img src="imgprincipal.webp" class="imagen" alt="fotoPrincipal">
+    </h2>
+
     <article>
         <h2> Pagina Personal </h2>
         <h3> Hola, mi nombre es Facundo Contreras </h3>
