--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
     </header>
     
     <main>
-
+        <h3>Formulario</h3>
         <form action="#">
             <!-- Nombre -->
             <label for="nombre">Nombre:</label>
