--- a/contacto.html
+++ b/contacto.html
@@ -139,6 +139,8 @@
 
     </main>
 
+    <a href="#" class="back-to-top">&#8679;</a>
+
     <footer id="pie" class="sticky-footer">
         <p>
             CURZA
