--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
     </main>
 
+    <a href="#" class="back-to-top">&#8679;</a>
+
     <footer id="pie" class="sticky-footer">
         <p>
             CURZA
