--- a/acercade.html
+++ b/acercade.html
@@ -11,7 +11,7 @@
     
     <header class="fixed-header">
         <div class="titulo">
-            <h1> Programación Estatica y Laboratorio Web </h1>
+            <h1> Bienvenido a mi página personal </h1>
         </div>
         <div class="logo">
             <img src="logocurza.png" alt="logo">
@@ -33,10 +33,27 @@
         </div>
         <div id="completo" style="display: none;">
             <p>
-                Mi nombre es Facundo Rodrigo Contreras  
+                INFORMACION PERSONAL
             </p>
             <p>
-                Naci el 13 de Marzo de 1992 en la ciudad de Viedma provincia de Rio Negro. Soy tecnico agronomo, tecnico en repacion de celulares y estudiante de la carrera de desarrollo web. Trabajo como docente en nivel secundario.
+                Naci el 13 de Marzo de 1992 en la ciudad de Viedma provincia de Rio Negro.
+            </p>
+            <p>
+                FORMACION
+            </p>
+            <p>
+                Soy tecnico agronomo, tecnico en repacion de celulares y estudiante de la carrera de desarrollo web.
+            
+            <p>
+                OCUPACION
+            </p>
+            <P>
+                Trabajo como docente en nivel secundario.
+            </p>
+            <p>
+                HOBBY
+            </p>
+            <p>
                 Mi hobby es el stand up paddle sobre aguas planas, de manera recreativa y competitiva.
             </p>
         </div>
