--- a/contacto.html
+++ b/contacto.html
@@ -68,7 +68,7 @@
             
             <!-- Método Preferido de Contacto -->
             <fieldset>
-                <legend>Método preferido de contacto:</legend> 
+                <legend>Método preferido de contacto:<legend> 
                 <label>
                     <input type="radio" id="correo_electronico" name="metodo_contacto" value="correo_electronico" checked> Correo electrónico 
                 </label>
@@ -154,6 +154,7 @@
 
     <a href="#" class="back-to-top">&#8679;</a>
 
+
     <footer id="pie" class="sticky-footer">
         <p>
             CURZA
@@ -173,6 +174,8 @@
 
     </footer>
 
+
+    <script src="script.js"></script>
 
 </body>
 </html>
