--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="acercade.html"> Informacion Personal </a></li>
-            <li><a href="contacto.html"> Contacto </a></li>
+            <li><a href="index.html">INICIO</a></li>
+            <li><a href="acercade.html"> INFORMACION PERSONAL </a></li>
+            <li><a href="contacto.html"> CONTACTO </a></li>
+            <li><a href="piedraPapelTijera.html">JUEGO</a></li>
 
         </ul>
     </nav>
