--- a/contacto.html
+++ b/contacto.html
@@ -9,8 +9,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html"> Pagina Principal </a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="index.html"> PAGINA PRINCIPAL </a></li>
+            <li><a href="contacto.html"></a></li>
         </ul>
     </nav>
 
