--- a/piedraPapelTijera.html
+++ b/piedraPapelTijera.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Pagina Principal</a></li>
+            <li><a href="index.html">PAGINA PRINCIPAL</a></li>
         </ul>
     </nav>
 
